feat(vehicle-evaluation): dashboard gerencial e relatórios
- adicionar endpoints ADMIN para dashboard e exportação (Excel/PDF)
- implementar queries agregadas, DTOs e handler do dashboard com filtros (avaliador/período/status)
- adicionar endpoint público para validação de laudo por token
- configurar cache Redis/TTL para consultas pesadas e ajustar configuração do serviço
- otimizar performance com migração de índices para queries do dashboard/validação
- atualizar tarefa 11 e adicionar relatório de revisão